--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.4.1",
     "express": "^4.17.1",
     "inquirer": "^8.2.4",
     "mysql2": "^2.2.5"
